Refactored AddGeckoForm to use modal service. Reset margin on form base element (was causing spacing issues). Renamed AddGeckoFormDirective.js to AddGeckoFormController.js. Fixed status message on gecko delete from main gecko table.

--- a/public/assets/css/modules/_modal.less
+++ b/public/assets/css/modules/_modal.less
@@ -76,6 +76,10 @@
 	
 }
 
+.modal_ .buttons {
+	padding: 8px;
+}
+
 // TODO We need to create global flat button classes
 .modal_ .flat-button {
 	font-family: Roboto;
